# optix-rs

./: Cargo.toml  bindgen.sh  wrapper.h
src/: autogen_optix.rs  lib.rs  load.rs  optix.rs  optix_bindgen.rs  optix_result.rs
